--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
+  ion-card {
+    text-align: center;
+    padding: 4rem 2rem;
 
+    > .card-title {
+      font-size: 4rem;
+    }
+  }
 }
