--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,17 @@
 page-home {
-  ion-card {
-    text-align: center;
-    padding: 4rem 2rem;
 
-    > .card-title {
-      font-size: 4rem;
+    ion-content {
+
+        .weather-temperature {
+            font-size: 8rem;
+            line-height: 1em;
+        }
+
+        ion-grid.grid {
+            height: 100%;
+            -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+            flex-direction: row;
+        }
     }
-  }
 }
